@@ -107,6 +107,7 @@ t/22-aks-prime.t
 t/23-primality-proofs.t
 t/23-random-certs.t
 t/24-partitions.t
+t/25-lucas_sequences.t
 t/30-relations.t
 t/31-threading.t
 t/32-iterators.t
